--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "core-js": "2.6.10",
     "css-loader": "^3.4.2",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-loader": "^3.0.3",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
@@ -33,6 +35,7 @@
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.5",
     "transform-runtime": "^0.0.0",
+    "url-loader": "^3.0.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
@@ -45,5 +48,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0"
-  }
+  },
+  "sideEffects": false
 }
