--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,8 @@
         "corejs": 2,
         "useBuiltIns": "usage" //usage 会根据配置的浏览器兼容，以及你代码中用到的 API 来进行 polyfill，实现了按需添加。
       }
-    ]
+    ],
+    "@babel/preset-react"
   ],
   "plugins": [
     "@babel/plugin-transform-runtime"
