--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@babel/core": "^7.8.4",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
     "@babel/runtime": "^7.8.4",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -33,6 +35,8 @@
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.5",
     "transform-runtime": "^0.0.0",
